# dag_multi_agent

./: .gitignore  README.md
S8SharedCode/: .env.example  ASSIGNMENT.md  README.md  STUDENT_SCAFFOLD_README.md
S8SharedCode/code/: agent_config.yaml  flow.py  gateway.py  memory.py  pyproject.toml  replay.py  schemas.py  skills.py  usage.json
S8SharedCode/code/prompts/: browser.md  coder.md  distiller.md  formatter.md  planner.md  translator.md
S8SharedCode/code/result_logs/: query_A.md  query_I.md  query_J.md  query_K.md  query_coder.md  query_critic.md  query_fan_out.md  query_hello.md  query_translator.md
S8SharedCode/code/sandbox/papers/: attention.md  cot.md  dpo.md  lora.md  react.md
S8SharedCode/code/state/: index.faiss  index_ids.json  memory.json
S8SharedCode/gateway/: client.py  main.py  pyproject.toml  schemas.py
