[project]
name = "eagv3-s8"
version = "0.1.0"
description = "EAGV3 Session 8 agent: S7 four-role architecture lifted to a NetworkX growing graph."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "ddgs",
    "tavily-python",
    "crawl4ai",
    "python-dotenv",
    "pydantic>=2.13.4",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "network: test requires internet access",
    "embed: test requires the embedding endpoint (gateway V8)",
]
